modules/network/security-group.tf
resource "aws_security_group" "devops-case-sg" {
  vpc_id = "${module.vpc.vpc_id}"
  description = "security group that allows 22&80&443 and all egress traffic"
  name = "devops-case-sg"
  egress {
      from_port = 0
      to_port = 0
      protocol = "-1"
      cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
      from_port = 22
      to_port = 22
      protocol = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
      from_port = 443
      to_port = 443
      protocol = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
      from_port = 80
      to_port = 80
      protocol = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "devops-case-sg"
  }
}
